--- a/app/globals.css
+++ b/app/globals.css
@@ -2,23 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
-    --background: 0 0% 93%;
-    --foreground: 200 50% 3%;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --background: 204 19% 5%;
-      --foreground: 200 20% 96%;
-    }
-  }
+.transition-card {
+  transition:
+    transform,
+    opacity,
+    background,
+    0.25s ease;
 }
-
 @layer base {
   * {
     @apply border-foreground/20;
+    @apply text-default-foreground;
   }
 }
 
