Update color variables in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
+    --background-content: 190 50% 97%;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -13,7 +14,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 25 100% 40%;
+    --primary: 20.67 100% 35.29%;
     --primary-foreground: 210 40% 98%;
 
     --primary-faded: 25 100% 90%;
@@ -46,6 +47,7 @@
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
+    --background-content: 222.2 84% 4.9%;
 
     --card: 217.2 32.6% 17.5%;
     --card-foreground: 210 40% 98%;
@@ -53,10 +55,10 @@
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 25 100% 40%;
+    --primary: 20.67 100% 35.29%;
     --primary-foreground: 210 40% 98%;
 
-    --primary-faded: 25 100% 15%;
+    --primary-faded: 20.67 100% 15.29%;
     --primary-faded-foreground: 25 80% 90%;
 
     --secondary: 217.2 32.6% 17.5%;
@@ -85,9 +87,6 @@
 @layer base {
   * {
     @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
   }
 }
 
